# chemivec

./: .gitignore  CMakeLists.txt  Readme.md  environment.yml  pyproject.toml  setup.py  test.py  test_10000.npy
.github/workflows/: build_wheels.yml
chemivec/: CMakeLists.txt
chemivec-src/: CMakeLists.txt
chemivec-src/core/: CMakeLists.txt
chemivec-src/core/src/: vec.c
chemivec-src/pyext/: CMakeLists.txt  pyext.c
chemivec-src/tests/: test.c
chemivec/pyext/: CMakeLists.txt
chemivec/tests/: CMakeLists.txt
src/: CMakeLists.txt
src/chemivec/: __init__.py  options.py  search.py
src/core/: CMakeLists.txt
src/core/src/: core.c  core.h  vec.c  vec.h
src/pyext/: CMakeLists.txt  pyext.c
src/tests/: CMakeLists.txt  test.c
tests/: basic_test.py  mol_substruct_test.py  rxn_substruct_test.py  rxn_substructure_test.py  test_1000.npy
