[project]
name="chemivec"
version="0.1.0"
description="Vectorized cheminformatics library leveraging EPAM Indigo Toolkit"
requires-python = ">=3.7"
dependencies = [
    'numpy>=1.7',
    'pandas'
]

[build-system]
requires = [
    "scikit-build-core",
    "numpy>=1.7",
]
requires-python = ">=3.7"
build-backend = "scikit_build_core.build"

[tool.scikit-build]
#cmake.verbose = true
#logging.level = "INFO"

[tool.scikit-build.cmake.define]
#CMAKE_GENERATOR  = "Ninja"

[tool.cibuildwheel]
# Python >= 3.7, skip 32bit
skip = "cp36-* *-win32 *-manylinux_i686"
build = "cp38-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-verbosity = 1
before-build = [
]
environment = { CMAKE_ARGS="-DCIBUILDWHEEL=1" }

# Windows
[tool.cibuildwheel.windows]

# Linux
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_24"
environment = { CMAKE_GENERATOR="Ninja" }
environment-pass = ["CMAKE_ARGS", "CMAKE_GENERATOR"]
before-all = [
    "apt-get update",
    "apt-get install libcairo2-dev -y",
    "apt-get install zlib1g-dev -y"
]
