[project]
name="chemivec"
version="0.1.0"
description="Vectorized cheminformatics library leveraging EPAM Indigo Toolkit"
requires-python = ">=3.8"
dependencies = [
    'numpy>=1.7',
    'pandas'
]

[build-system]
requires = [
    "scikit-build-core",
    "numpy>=1.7",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
#cmake.verbose = true
#logging.level = "INFO"
build-dir = "build" #for local `pip install . `

[tool.cibuildwheel]
# Python >= 3.8, skip 32bit
skip = "*-win32 *-manylinux_i686"
build = "cp3{8,9,10,11}-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-verbosity = 1

# Windows
[tool.cibuildwheel.windows]

[tool.cibuildwheel.windows.environment]
CMAKE_ARGS="-DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++"
CMAKE_GENERATOR="Ninja"

# Linux
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux1"
environment-pass = ["CMAKE_ARGS", "CMAKE_GENERATOR", "CIBUILDWHEEL"]
before-build = [
    "yum install cairo-devel -y"
]

[tool.cibuildwheel.linux.environment]
CMAKE_ARGS="-DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++"
CMAKE_GENERATOR="Ninja"

# MacOS
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

